--- a/FRA_l_english.yml
+++ b/FRA_l_english.yml
@@ -42,6 +42,49 @@ l_english:
  FRA_tungsten_mines:0 "텅스텐 광산"
  FRA_tungsten_mines_desc:0 "To feed our warmachine, we need more tungsten. The indochinese mines could provide more if we develop them."
 	
+	#### ECONOMIC REFORMS FOCUS ####
+	
+ FRA_economic_reforms:0 "경제 개혁"
+ FRA_economic_reforms_desc:0 "The french economy is in a precarious situation. We must initiate economic reforms to get rid of the inflation, stabilize the franc and reduce the national deficit."
+ FRA_economic_reforms_tooltip:0 "§R'인플레이션' 이벤트를 잠금 해제합니다.\n§!"
+ FRA_sncf:0 "프랑스 국영 철도 회사"
+ FRA_sncf_desc:0 "The nationalisation of France's main railway companies will insure the control of the means of transport. The new French National Railway Company will have the task to develop the current infrastructures."
+ FRA_sncf_tooltip:0 "§Y일드프랑스§!, §Y파드칼레§!, §Y상파뉴§!, §Y알자스§!의 §Y기반시설§!을 최대로 확장합니다"
+ FRA_devaluation:0 "프랑 평가 절하"
+ FRA_devaluation_desc:0 "The only efficient way to quickly be rid of the inflation is to devaluate the currency, multiple times if there are the necessity."
+ FRA_budget_deficit_law:0 "예산결손법"
+ FRA_budget_deficit_law_desc:0 "The national deficit must be reduce by taking drastic measures like cut in the public expenses."
+ FRA_exchange_rate_stabilisation:0 "환율 안정화"
+ FRA_exchange_rate_stabilisation_desc:0 "The exports are falled because of the high value of the franc. We can create a exchanges stabilisation fund to figth against the inflation and the capital evasion."
+ FRA_exchange_rate_stabilisation_tooltip:0 "§R'블룸 지원' 또는 공산주의 정부가 잠금 해제됩니다.\n§!"
+ FRA_bank_france:0 "프랑스 은행"
+ FRA_bank_france_desc:0 "We have already reform the status of the Bank of France, but to retake control of the economic situation we must nationalize it. "
+ 
+	#### REARMEMENT FOCUS ####
+ 
+ FRA_rearmament:0 "재무장"
+ FRA_rearmament_desc:0 "Germany is more and more threatening each days. We can't stay pacifist and we need to rearm our country."
+ FRA_military_complex_nationalisation:0 "군수산업단지 국영화"
+ FRA_military_complex_nationalisation_desc:0 "Our fabrication capacity is still limited. We can force the nationalisation of some manufactures to reach a real production efficiency."
+ FRA_military_complex_nationalisation_tooltip:0 "다음 §Y건설 회사§!를 사용 가능케 합니다 : §YSMN§!와 §YVétra§!.\n"
+ FRA_defense_national_funds:0 "국방 기금"
+ FRA_defense_national_funds_desc:0 "We couldn't afford an extensive rearmament with our current budget and reach our production goals. We need to increase the budget part allowed to the rearmament and take some loads to finance some projects."
+ FRA_defense_national_funds_tooltip:0 "§Y군사 부문의 중점을 잠금 해제합니다.§!\n이용 가능한 §Y정치적 조언자§! : §YFélix Gouin§!과 §YPaul Faure§!."
+ FRA_war_material_licence:0 "전쟁물자 생산 허가"
+ FRA_war_material_licence_desc:0 "To stimulate the development of the military industries and secure infantery equipement supplies, we can accord some licence to control the production."
+ FRA_war_material_licence_tooltip:0 "§R'달라디에 지원' 또는 파시즘 정부가 잠금 해제됩니다.\n§!이용 가능한 §Y지원장비 설계사§! : §YMAB§!, §YAPX§!와 §YDe Dion-Bouton§!.\n"
+ FRA_aircraft_manufacturer_nationalisation:0 "항공기 제조업체 국유화"
+ FRA_aircraft_manufacturer_nationalisation_desc:0 "As the talks to buy American aircraft stagnate, we should nationalize aircraft manufacturers to fix the french productivity deficiencies in this sector."
+ FRA_partial_mobilization:0 "부분적 동원령"
+ FRA_partial_mobilization_desc:0 "The germans are aggressive and the world is insecure. The war is near and we should declare the partial mobilization."
+ FRA_commit_automobile_manufacturer:0 "자동차 제조업체 설립"
+ FRA_commit_automobile_manufacturer_desc:0 "The automobile manufacturers are also the principal producer of high-power military engine like tanks or motorised pieces. The state need to cooperate with the industrials to fulfill your army mechanized."
+ FRA_commit_automobile_manufacturer_tooltip:0 "§R'달라디에 지원' 또는 파시즘 정부가 잠금 해제됩니다.\n§!이용 가능한 §Y전차 설계사§! : §YLorraine-Dietrich§!, §YBerlier§!와 §YDelaunay-Belleville§!.\n"
+ FRA_wartime_organisation_act:0 "전시 조직법"
+ FRA_wartime_organisation_act_desc:0 "Before the war breaks, we must define the organisation of the nation during wartime."
+ FRA_war_effort_law:0 "전시 체제 돌입"
+ FRA_war_effort_law_desc:0 "To contribute to the war effort, each French must pay additional impots and they can also buy treasury bills."
+	
 	#### POLITICAL FOCUS ####
  
  FRA_legislative_election:0 "입법 선거"
@@ -206,43 +249,43 @@ l_english:
  FRA_navy_focus:0 "해군 중점"
  FRA_navy_focus_tt:0 "§Y해군 기지§! 건설을 위한 건설 슬롯이 충분하지 않음"
  FRA_navy_focus_desc:0 "If we plan to expand our navy the first step is to improve and expand our naval bases. Our unique ships require constant attention to stay combat ready at all times."
- FRA_improved_screen_ships:0 "Improved Screen Ships"
+ FRA_improved_screen_ships:0 "보조함 개선"
  FRA_improved_screen_ships_desc:0 "Destroyers and Lighter Cruisers play a key role in defending our heavier Battleships or Carriers. If we lose our line of defense at sea we risk all ships and men. We must make sure our ships are built with the latest technology."
- FRA_capital_ship_focus:0 "Capital Ship Focus"
+ FRA_capital_ship_focus:0 "전함 중점"
  FRA_capital_ship_focus_desc:0 "Improving the design of our Battleships would lead to great tactical advantages. With their range and power uncontested, no one will be able to outrun their guns."
- FRA_carrier_focus:0 "Carrier Focus"
+ FRA_carrier_focus:0 "항공모함 중점"
  FRA_carrier_focus_desc:0 "Naval theorists have directed our attention to our outdated Carriers. They have suggestions on how Carriers can be further utilized if development is pushed in the right direction. Real progress cannot be made without our full support."
- FRA_naval_doctrine:0 "Naval Doctrine"
+ FRA_naval_doctrine:0 "해군 교리"
  FRA_naval_doctrine_desc:0 "Recent progress in ship designs have opened up new options in tactical and strategical maneuvers. Before we take chances with these new theories we need to have them properly tested and plans solidified."
- FRA_marines_and_landing_craft:0 "Marines and Landing Craft"
+ FRA_marines_and_landing_craft:0 "해병대 및 상륙작전"
  FRA_marines_and_landing_craft_desc:0 "Wars are not won by naval power alone; we must also be able to transport our armies across the waves and put them ashore safely..."
- FRA_submarine_effort:0 "Submarine Effort"
+ FRA_submarine_effort:0 "잠수함 개선"
  FRA_submarine_effort_desc:0 "Submarine warfare is the most exciting naval development since the invention of the torpedo boat. We would do well to not just protect against submarines, but also use them against enemy shipping."
  
 	#### AIR SECTION ####
  
  FRA_air_focus:0 "Air Focus"
- air_focus_bypass_tt:0 "Not enough building slots for §YAir Base§!"
+ air_focus_bypass_tt:0 "§Y공군 기지§! 건설을 위한 건설 슬롯이 충분하지 않음"
  FRA_air_focus_desc:0 "Time has come to expand on our Airforce! Plans have already been made to start construction of new Air Bases to support a big increase in both personnel and aircraft."
- FRA_cas_focus:0 "CAS Focus"
+ FRA_cas_focus:0 "CAS 중점"
  FRA_cas_focus_desc:0 "Planes which provide support for our land forces and ships have been a very efficient addition at a relatively small investment. These planes now have several suggested improvements. Our engineers can develop the next generation of support aircraft."
- FRA_fighter_focus:0 "Fighter Focus"
+ FRA_fighter_focus:0 "전투기 중점"
  FRA_fighter_focus_desc:0 "Some revolutionary civilian engineering can be applied on our Fighters to improve their speed, range and max altitude. We need to focus on this if we want to keep up with the advancements made by others."
- FRA_bomber_focus:0 "Bomber Focus"
+ FRA_bomber_focus:0 "폭격기 중점"
  FRA_bomber_focus_desc:0 "Air support is an important part of both our defensive and offensive capabilities. If we focus our efforts on developing fast, more agile and accurate bombers we will maintain an edge in any land battle."
- FRA_heavy_fighter_focus:0 "Heavy Fighter Focus"
+ FRA_heavy_fighter_focus:0 "중전투기 중점"
  FRA_heavy_fighter_focus_desc:0 "Our Heavy Fighters must be able to support the more vulnerable bomber airplanes. This requires heavier armament and longer range at the cost of some speed."
- FRA_air_doctrine:0 "Air Doctrine"
+ FRA_air_doctrine:0 "항공 교리"
  FRA_air_doctrine_desc:0 "We have gained enough experience to test new theories in air warfare at a faster pace. This will allow us to explore new tactical and strategic possibilities. Air combat is the key in modern warfare."
- FRA_heavy_bomber_focus:0 "Heavy Bomber Focus"
+ FRA_heavy_bomber_focus:0 "전략폭격기 중점"
  FRA_heavy_bomber_focus_desc:0 "Modern heavy bombers will be armed to handle lesser aerial skirmishes on their own. If we allow our engineers to focus on developing the newest technology we will have a better chance of destroying enemy production facilities."
- FRA_naval_bomber_focus:0 "Naval Bomber Focus"
+ FRA_naval_bomber_focus:0 "뇌격기 중점"
  FRA_naval_bomber_focus_desc:0 "Ships have proven exceptionally vulnerable to aircrafts. We should keep improving on their technology to ensure we stay ahead of any countermeasures."
- FRA_jet_effort:0 "Jet Effort"
+ FRA_jet_effort:0 "제트 엔진"
  FRA_jet_effort_desc:0 "Air combat is all about mobility. The Jet engine is such a powerful advance that the enemy pilots will seem to stand still while we rip them out of the sky."
   
 	#### FLAGS ####
- front_explosed:0 "Popular Front disbanded"
+ front_explosed:0 "인민 전선 "
   
 	############################
 					#### EVENTS ####
@@ -359,54 +402,54 @@ l_english:
  france.63.e:0 "Save the option for later"
 
 	#### WORLD NEWS ####
- worldnews.1.t:0 "Alliance with the Benelux"
- worldnews.1.d:0 "TO DO"
- worldnews.1.a:0 "TO DO"
- worldnews.2.t:0 "France pressures the Benelux"
- worldnews.2.d:0 "TO DO"
- worldnews.2.a:0 "TO DO"
- worldnews.3.t:0 "France annexs Wallonia"
- worldnews.3.d:0 "TO DO"
- worldnews.3.a:0 "TO DO"
- worldnews.4.t:0 "Restoration in France"
- worldnews.4.d:0 "TO DO"
- worldnews.4.a:0 "TO DO"
+ worldnews.1.t:0 "베네룩스와의 동맹"
+ worldnews.1.d:0 "그렇게 해라"
+ worldnews.1.a:0 "그렇게 해라"
+ worldnews.2.t:0 "프랑스의 베네룩스 압박"
+ worldnews.2.d:0 "그렇게 해라"
+ worldnews.2.a:0 "그렇게 해라"
+ worldnews.3.t:0 "프랑스의 왈로니아 합병"
+ worldnews.3.d:0 "그렇게 해라"
+ worldnews.3.a:0 "그렇게 해라"
+ worldnews.4.t:0 "프랑스의 부활"
+ worldnews.4.d:0 "그렇게 해라"
+ worldnews.4.a:0 "그렇게 해라"
   
 	############################
 						#### IDEAS ####
 	############################
 	
- FRA_inflation1:0 "Inflation"
- FRA_inflation2:0 "Inflation"
- FRA_inflation3:0 "Inflation"
- FRA_matignon_agreements1:0 "Matignon Agreements"
- FRA_matignon_agreements2:0 "Matignon Amendment"
- FRA_wartime_focus:0 "Wartime Organisation Act"
- FRA_agriculture_office:0 "Agriculture National Office"
- FRA_colonial_focus:0 "Colonial Investments"
- FRA_armament_program:0 "Armament Program"
- FRA_bank_nationalisation:0 "Bank of France nationalisation"
- FRA_banned_leagues:0 "Banned Leagues "
- FRA_research_focus:0 "Research Spirite"
- FRA_commando_marine:0 "Commandos Marine"
- FRA_desert_equipment:0 "Desert Equipment"
- FRA_blum_viollette_law:0 "Blum Viollette Law"
- FRA_purge:0 "Purges"
- FRA_reforms_failed:0 "Reforms Failed"
- FRA_support_monarchy_focus:0 "Monarchy Support"
- FRA_camelot:0 "Camelots du Roi"
- FRA_roi:0 "Roi Henry VII"
- FRA_franc_devaluation:0 "Franc Devaluation"
- FRA_espionage:0 "Secret Service"
- FRA_ideological_fanaticism:0 "Ideological Fanaticism"
- FRA_collectivisation:0 "Collectivisation"
- FRA_travaux:0 "Grands Travaux"
- FRA_war_opposition:0 "War Opposition"
- FRA_intervention_idea:0 "French Intervention"
+ FRA_inflation1:0 "인플레이션"
+ FRA_inflation2:0 "인플레이션"
+ FRA_inflation3:0 "인플레이션"
+ FRA_matignon_agreements1:0 "마티뇽 협정"
+ FRA_matignon_agreements2:0 "마티뇽 협정"
+ FRA_wartime_focus:0 "전시 대비법"
+ FRA_agriculture_office:0 "국가 농업청"
+ FRA_colonial_focus:0 "식민지 투자"
+ FRA_armament_program:0 "군비 투자"
+ FRA_bank_nationalisation:0 "프랑스 은행 국유화"
+ FRA_banned_leagues:0 "연맹금지"
+ FRA_research_focus:0 "연구 정신"
+ FRA_commando_marine:0 "코만도 해병대"
+ FRA_desert_equipment:0 "사막용 장비"
+ FRA_blum_viollette_law:0 "블룸-비올렛 법안"
+ FRA_purge:0 "숙청"
+ FRA_reforms_failed:0 "개혁 실패"
+ FRA_support_monarchy_focus:0 "군주제 지원"
+ FRA_camelot:0 "왕의 하수인"
+ FRA_roi:0 "헨리 7세"
+ FRA_franc_devaluation:0 "프랑 평가절하"
+ FRA_espionage:0 "기밀 정보국"
+ FRA_ideological_fanaticism:0 "이념적 광신"
+ FRA_collectivisation:0 "집산화"
+ FRA_travaux:0 그랑 트라보"
+ FRA_war_opposition:0 "전쟁 반대파"
+ FRA_intervention_idea:0 "프랑스의 개입"
  
 	#### TECHNOLOGY SHARING ####
- french_research_name:0 "French Research"
- french_research_desc:0 "Reduced research time for technologies researched by those under French rule."
+ french_research_name:0 "프랑스의 기술 공유"
+ french_research_desc:0 "프랑스의 지배하에 있는 이들이 연구하는 기술의 시간이 단축됩니다."
  
 	#### COMPAGNIES ####
  fcm:0 "FCM"
@@ -415,17 +458,17 @@ l_english:
  caer_desc:0 "Chantiers Aéronavals Étienne Romano"
  brest:0 "CNF"
  brest_desc:0 "Chantiers Navals Français"
- penhoet:0 "Penhoët"
+ penhoet:0 "펜호에트"
  penhoet_desc:0 "Chantiers Penhoët de Saint-Nazaire"
  cfp:0 "CFP"
  cfp_desc:0 "Compagnie Française des Pétroles"
  csf:0 "CFS"
  csf_desc:0 "Compagnie Générale de Télégraphie sans fil"
- radiola:0 "Radiola"
- peugeot:0 "Peugeot"
- citroen:0 "Citroën"
- hotchkiss:0 "Hotchkiss"
- latecoere:0 "Latécoère"
+ radiola:0 "라디올라"
+ peugeot:0 "푸조"
+ citroen:0 "시트로앵"
+ hotchkiss:0 "호치키스"
+ latecoere:0 "라테코헤르"
  dakar:0 "CND"
  dakar_desc:0 "Chantiers Navals de Dakar"
  somua_desc:0 "Société d'Outillage Mécanique et d'Usinage d'Artillerie"
@@ -437,62 +480,62 @@ l_english:
  tunis_desc:0 "Manufacture d'Armes de Tunis"
  normandie:0 "SMN"
  normandie_desc:0 "Société Métallurgique de Normandie"
- bouton:0 "De Dion-Bouton"
+ bouton:0 "드 디옹-부통"
  puteaux:0 "APX"
  puteaux_desc:0 "Ateliers de Puteaux"
  bayonne:0 "MAB"
  bayonne_desc:0 "Manufacture d'Armes de Bayonne"
- vetra:0 "Vétra"
+ vetra:0 "베트라"
  vetra_desc:0 "Société des Véhicules et Tracteurs Électriques"
  bull:0 "Bull"
  bull_desc:0 "Compagnie des Machines Bull"
- poulenc:0 "Rhône-Poulenc"
+ poulenc:0 "론-풀랭"
  poulenc_desc:0 "Société des usines chimiques Rhône-Poulenc"
- darne:0 "Darne"
- oran:0 "Oran"
+ darne:0 "다르느"
+ oran:0 "오랑"
  oran_desc:0 "Oran Société de Construction Navale"
- dietrich:0 "Lorraine-Dietrich"
+ dietrich:0 "로렌-디트리히"
  dietrich_desc:0 "Société Lorraine des anciens établissements de Dietrich et Cie de Lunéville"
- panhard:0 "Panhard & Levassor"
- berliet:0 "Berliet"
- delaunay:0 "Delaunay-Belleville"
- bleriot:0 "Blériot"
+ panhard:0 "파나르 & 르바세르"
+ berliet:0 "베리에"
+ delaunay:0 "들루네-벨빌"
+ bleriot:0 "블레리오"
  bleriot_desc:0 "Blériot Aéronautique"
- fouga:0 "Fouga"
+ fouga:0 "푸가"
  fouga_desc: "Établissements Fouga et Cie"
- dewoitine:0 "Dewoitine"
+ dewoitine:0 "드와탱"
  dewoitine_desc:0 "Constructions aéronautiques Émile Dewoitine"
- potez:0 "Potez"
+ potez:0 "포테즈"
  potez_desc:0 "Aéroplanes Henry Potez"
  
 	#### MINISTERS ####
- edouard_herriot:0 "Édouard Herriot"
+ edouard_herriot:0 "에두아르 에리오"
  henri_queuille:0 "Henri Queuille"
- paul_faure:0 "Paul Faure"
+ paul_faure:0 "폴 포레"
  jean_moulin:0 "Jean Moulin"
- vincent_auriol:0 "Vincent Auriol"
- paul_reynaud:0 "Paul Reynaud"
+ vincent_auriol:0 "뱅상 오리오"
+ paul_reynaud:0 "폴 레노"
  
   	############################
 					#### TRAITS ####
 	############################
 	
- infantry_equipment_producer_mass:0 "Mass Infantery Producer"
- medium_tank_manufacturer:0 "Medium Tank Designer"
- motorised_equipment_producer_quality: "Quality Motorised Designer"
- artillery_producer_defense:0 "Defensive Artillery Designer"
- support_equipment_producer_mass:0 "Mass Equipement Producer"
- construction_concern:0 "Construction Concern"
- ship_producer_mass:0 "Mass Ship Producer"
- tank_producer_mass:0 "Mass Tank Producer"
- tank_producer_quality:0 "Quality Tank Designer"
- tank_producer_offense: "Offensive Tank Designer"
- tank_producer_defense:0 "Defensive Tank Designer"
- fighter_producer_mass:0 "Mass Fighter Producer"
- medium_aircraft_manufacturer_2:0 "Medium Aircraft Designer"
- heavy_aircraft_manufacturer_2:0 "Heavy Aircraft Designer"
- jet_concern:0 " Jet Engines Designer"
- refinery_concern:0 "Refinery Concern"
+ infantry_equipment_producer_mass:0 "대규모 보병장비 생산 회사"
+ medium_tank_manufacturer:0 "중형 전차 설계사"
+ motorised_equipment_producer_quality: "고품질 모터 설계사"
+ artillery_producer_defense:0 "방어용 대포 설계사"
+ support_equipment_producer_mass:0 "대규모 지원장비 생산 회사"
+ construction_concern:0 "건설 관련"
+ ship_producer_mass:0 "대규모 선박 생산 회사"
+ tank_producer_mass:0 "대규모 전차 생산 회사"
+ tank_producer_quality:0 "고품질 전차 설계사"
+ tank_producer_offense: "공세적 전차 설계사"
+ tank_producer_defense:0 "방어적 전차 설계사"
+ fighter_producer_mass:0 "대규모 항공기 생산 회사"
+ medium_aircraft_manufacturer_2:0 "중형비행기 설계사"
+ heavy_aircraft_manufacturer_2:0 "중비행기 설계사"
+ jet_concern:0 "제트엔진 설계사"
+ refinery_concern:0 "정유 관련"
  
  
   	############################
@@ -521,4 +564,4 @@ l_english:
  FRI_jean_tassigny:0 "Jean de Lattre de Tassigny"
  FRI_jean_decoux:0 "Jean Decoux"
  FRI_jules_brevie:0 "Jules Brévié"
- 
+
