--- a/Rt56_SOV_l_english.yml
+++ b/Rt56_SOV_l_english.yml
@@ -76,7 +76,7 @@
  SOV_Develop_Oil_Concern_desc:0 "We need to invest in more prospecting and building more refineries to take advantage of our massive oil deposits in the caucases."
  SOV_industrial_cities:0 "추가적인 공업도시 형성"
  SOV_industrial_cities_desc:0 ""
- SOV_third_five_year_plan:0 "5개년 계획의 끝
+ SOV_third_five_year_plan:0 "5개년 계획의 끝"
  SOV_third_five_year_plan_desc:0 ""
  SOV_steel_industry_improvements:0 "철강산업 개선"
  SOV_steel_industry_improvements_desc:0 ""
