--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -405,149 +405,149 @@
  VICTORY_POINTS_7361:0 "핼리팩스"
  VICTORY_POINTS_12149:0 "퀘벡"
  VICTORY_POINTS_1965:0 "멕시코시티"
- VICTORY_POINTS_4956:0 "San Luis Potosi"
- VICTORY_POINTS_12810:0 "Veracruz"
- VICTORY_POINTS_12835:0 "Monterrey"
- VICTORY_POINTS_13089:0 "Guadalajara"
- VICTORY_POINTS_10886:0 "Guatemala"
- VICTORY_POINTS_12823:0 "San Salvador"
- VICTORY_POINTS_12865:0 "Tegucigalpa"
- VICTORY_POINTS_12738:0 "Managua"
- VICTORY_POINTS_13087:0 "San Jose"
- VICTORY_POINTS_7630:0 "Panamá"
- VICTORY_POINTS_7622:0 "Havana"
- VICTORY_POINTS_7590:0 "Guantánamo"
- VICTORY_POINTS_4641:0 "Port-au-Prince"
- VICTORY_POINTS_7660:0 "Santo Domingo"
- VICTORY_POINTS_4598:0 "Santiago de los Caballeros"
- VICTORY_POINTS_12885:0 "Cayenne"
- VICTORY_POINTS_10747:0 "Bogota"
- VICTORY_POINTS_2023:0 "Medellin"
- VICTORY_POINTS_12790:0 "Cartagena"
- VICTORY_POINTS_8113:0 "Caracas"
- VICTORY_POINTS_1944:0 "Maracaibo"
- VICTORY_POINTS_12798:0 "Quito"
- VICTORY_POINTS_12997:0 "Lima"
- VICTORY_POINTS_2210:0 "Arequipa"
- VICTORY_POINTS_5230:0 "La Paz"
- VICTORY_POINTS_2152:0 "Asunción"
- VICTORY_POINTS_10980:0 "Rio de Janeiro"
- VICTORY_POINTS_5107:0 "Fortaleza"
- VICTORY_POINTS_5168:0 "Récife"
- VICTORY_POINTS_10447:0 "Porto Alegre"
- VICTORY_POINTS_10513:0 "Sao Paulo"
- VICTORY_POINTS_10946:0 "São Salvador"
- VICTORY_POINTS_12853:0 "Belém"
- VICTORY_POINTS_10362:0 "Montevideo"
- VICTORY_POINTS_12364:0 "Buenos Aires"
- VICTORY_POINTS_7500:0 "Rosario"
- VICTORY_POINTS_7621:0 "Mar del Plata"
- VICTORY_POINTS_8216:0 "Tucumán"
- VICTORY_POINTS_12942:0 "Córdoba"
- VICTORY_POINTS_650:0 "Santiago"
- VICTORY_POINTS_10400:0 "Pretoria"
- VICTORY_POINTS_1468:0 "Durban"
- VICTORY_POINTS_4696:0 "Port Elizabeth"
- VICTORY_POINTS_12589:0 "Cape Town"
- VICTORY_POINTS_8245:0 "Lourenco Marques"
- VICTORY_POINTS_8248:0 "Luanda"
- VICTORY_POINTS_10966:0 "Nova Lisboa"
- VICTORY_POINTS_10929:0 "Salisbury"
- VICTORY_POINTS_191:0 "Elisabethville"
- VICTORY_POINTS_1950:0 "Stanleyville" 
- VICTORY_POINTS_5117:0 "Léopoldville"
- VICTORY_POINTS_5139:0 "Libreville"
- VICTORY_POINTS_8193:0 "Brazzaville"
- VICTORY_POINTS_5210:0 "Mombasa"
- VICTORY_POINTS_2050:0 "Lagos"
- VICTORY_POINTS_7959:0 "Monrovia"
- VICTORY_POINTS_4948:0 "Dakar"
- VICTORY_POINTS_12766:0 "Asmara"
- VICTORY_POINTS_12806:0 "Khartoum"
- VICTORY_POINTS_1269:0 "Guadalcanal"
- VICTORY_POINTS_3995:0 "Saipan"
- VICTORY_POINTS_4180:0 "Honolulu"
- VICTORY_POINTS_4226:0 "Buin"
- VICTORY_POINTS_4268:0 "Noumea"
- VICTORY_POINTS_4329:0 "Port Moresby"
- VICTORY_POINTS_2489:0 "Truk"
- VICTORY_POINTS_4357:0 "North Palau"
- VICTORY_POINTS_7251:0 "Rabaul"
- VICTORY_POINTS_7302:0 "Suva"
- VICTORY_POINTS_12140:0 "Guam"
- VICTORY_POINTS_12237:0 "Lae"
- VICTORY_POINTS_13021:0 "Tarawa"
- VICTORY_POINTS_13025:0 "Iwo Jima"
- VICTORY_POINTS_13028:0 "Yap"
- VICTORY_POINTS_13038:0 "Nauru"
- VICTORY_POINTS_13041:0 "Kwajalein"
- VICTORY_POINTS_13046:0 "Eniwetok"
- VICTORY_POINTS_13047:0 "Wake"
- VICTORY_POINTS_13052:0 "Midway"
- VICTORY_POINTS_4286:0 "Suva"
- VICTORY_POINTS_5010:0 "Addis Ababa"
- VICTORY_POINTS_1984:0 "Gondar"
- VICTORY_POINTS_7980:0 "Harar"
- VICTORY_POINTS_1319:0 "Kunming"
- VICTORY_POINTS_8049:0 "Yan'an"
- VICTORY_POINTS_1519:0 "Taiyuan"
- VICTORY_POINTS_377:0 "Cardiff"
- VICTORY_POINTS_495:0 "Dortmund"
- VICTORY_POINTS_540:0 "Plymouth"
- VICTORY_POINTS_657:0 "Constanta"
- VICTORY_POINTS_778:0 "Annecy"
- VICTORY_POINTS_904:0 "Düzce"
- VICTORY_POINTS_911:0 "Toulon"
- VICTORY_POINTS_925:0 "Ancona"
- VICTORY_POINTS_1005:0 "Antalya"
- VICTORY_POINTS_1048:0 "Cádiz"
- VICTORY_POINTS_1070:0 "Haikou"
- VICTORY_POINTS_1273:0 "Goa"
- VICTORY_POINTS_1440:0 "San Juan"
- VICTORY_POINTS_1751:1 "Ponta Delgada"
- VICTORY_POINTS_2038:0 "Freetown"
- VICTORY_POINTS_2045:0 "Tianshui"
- VICTORY_POINTS_2189:0 "Hobart"
- VICTORY_POINTS_2196:0 "Dar es Salaam"
- VICTORY_POINTS_3456:0 "Karachi"
- VICTORY_POINTS_3501:0 "Dover"
- VICTORY_POINTS_3838:0 "Ajáccio"
- VICTORY_POINTS_4159:0 "Messina"
- VICTORY_POINTS_4189:0 "Macau"
- VICTORY_POINTS_4206:0 "Tel Aviv"
- VICTORY_POINTS_4464:0 "Biloxi"
- VICTORY_POINTS_5074:0 "Aden"
- VICTORY_POINTS_6300:0 "Rosyth"
- VICTORY_POINTS_3561:0 "Erfurt"
- VICTORY_POINTS_6882:0 "Newark"
- VICTORY_POINTS_6973:0 "La Spezia"
- VICTORY_POINTS_6984:0 "Baltimore"
- VICTORY_POINTS_7132:0 "Oran"
- VICTORY_POINTS_7371:1 "Brunei"
- VICTORY_POINTS_7617:0 "Colón"
- VICTORY_POINTS_7940:0 "Golmud"
- VICTORY_POINTS_7960:0 "Abu Dhabi"
- VICTORY_POINTS_7965:0 "Dali"
- VICTORY_POINTS_7982:0 "Bandar e'Abbas"
- VICTORY_POINTS_8085:0 "Kuwait City"
- VICTORY_POINTS_8252:0 "Guayaquil"
- VICTORY_POINTS_9108:0 "Luleå"
- VICTORY_POINTS_9458:0 "Portsmouth"
- VICTORY_POINTS_9832:0 "Providence"
- VICTORY_POINTS_9907:0 "Florence"
- VICTORY_POINTS_9945:1 "Ceuta"
- VICTORY_POINTS_9974:0 "Ningbo"
- VICTORY_POINTS_9975:0 "Ahmadabad"
- VICTORY_POINTS_9994:0 "Bizerte"
- VICTORY_POINTS_10007:0 "Rhodes"
- VICTORY_POINTS_10201:0 "Trincomalee"
- VICTORY_POINTS_10367:0 "Attu Island"
- VICTORY_POINTS_10862:0 "Accra"
- VICTORY_POINTS_11064:0 "Scapa Flow"
- VICTORY_POINTS_271:0 "Norwich"
- VICTORY_POINTS_11297:0 "Hull"
- VICTORY_POINTS_11435:0 "Bitburg"
- VICTORY_POINTS_12674:0 "Reykjavik"
+ VICTORY_POINTS_4956:0 "산루이포토시"
+ VICTORY_POINTS_12810:0 "베라크루즈"
+ VICTORY_POINTS_12835:0 "몬테레이"
+ VICTORY_POINTS_13089:0 "과달라하라"
+ VICTORY_POINTS_10886:0 "과테말라"
+ VICTORY_POINTS_12823:0 "산살바도르"
+ VICTORY_POINTS_12865:0 "테구시갈파"
+ VICTORY_POINTS_12738:0 "마나과"
+ VICTORY_POINTS_13087:0 "산호세"
+ VICTORY_POINTS_7630:0 "파나마"
+ VICTORY_POINTS_7622:0 "아바나"
+ VICTORY_POINTS_7590:0 "관타나모"
+ VICTORY_POINTS_4641:0 "포르토프랭스"
+ VICTORY_POINTS_7660:0 "산토도밍고"
+ VICTORY_POINTS_4598:0 "산티아고데로스카바예로스"
+ VICTORY_POINTS_12885:0 "카이엔"
+ VICTORY_POINTS_10747:0 "보고타"
+ VICTORY_POINTS_2023:0 "메데인"
+ VICTORY_POINTS_12790:0 "카르타헤나"
+ VICTORY_POINTS_8113:0 "카라카스"
+ VICTORY_POINTS_1944:0 "마라카이보"
+ VICTORY_POINTS_12798:0 "키토"
+ VICTORY_POINTS_12997:0 "리마"
+ VICTORY_POINTS_2210:0 "아레키파"
+ VICTORY_POINTS_5230:0 "라파스"
+ VICTORY_POINTS_2152:0 "아순시온"
+ VICTORY_POINTS_10980:0 "리우데자네이루"
+ VICTORY_POINTS_5107:0 "포르탈레자"
+ VICTORY_POINTS_5168:0 "레시페"
+ VICTORY_POINTS_10447:0 "포르투알레그리"
+ VICTORY_POINTS_10513:0 "상파울로"
+ VICTORY_POINTS_10946:0 "상살바도르"
+ VICTORY_POINTS_12853:0 "벨렝"
+ VICTORY_POINTS_10362:0 "몬테비데오"
+ VICTORY_POINTS_12364:0 "부에노스아이레스"
+ VICTORY_POINTS_7500:0 "로사리오"
+ VICTORY_POINTS_7621:0 "마르델플라타"
+ VICTORY_POINTS_8216:0 "투쿠만"
+ VICTORY_POINTS_12942:0 "코르도바"
+ VICTORY_POINTS_650:0 "산티아고"
+ VICTORY_POINTS_10400:0 "프레토리아"
+ VICTORY_POINTS_1468:0 "다반"
+ VICTORY_POINTS_4696:0 "포트엘리자베스"
+ VICTORY_POINTS_12589:0 "케이프타운"
+ VICTORY_POINTS_8245:0 "로렌소마르케스"
+ VICTORY_POINTS_8248:0 "루안다"
+ VICTORY_POINTS_10966:0 "노바리스보아"
+ VICTORY_POINTS_10929:0 "솔즈베리"
+ VICTORY_POINTS_191:0 "엘리자베스빌"
+ VICTORY_POINTS_1950:0 "스탠리빌" 
+ VICTORY_POINTS_5117:0 "레오폴드빌"
+ VICTORY_POINTS_5139:0 "리브르빌"
+ VICTORY_POINTS_8193:0 "브라자빌"
+ VICTORY_POINTS_5210:0 "몸바사"
+ VICTORY_POINTS_2050:0 "라고스"
+ VICTORY_POINTS_7959:0 "몬로비아"
+ VICTORY_POINTS_4948:0 "다카르"
+ VICTORY_POINTS_12766:0 "아스마라"
+ VICTORY_POINTS_12806:0 "카르툼"
+ VICTORY_POINTS_1269:0 "과달카날"
+ VICTORY_POINTS_3995:0 "사이판"
+ VICTORY_POINTS_4180:0 "호놀룰루"
+ VICTORY_POINTS_4226:0 "부인"
+ VICTORY_POINTS_4268:0 "누메아"
+ VICTORY_POINTS_4329:0 "포트모르즈비"
+ VICTORY_POINTS_2489:0 "트루크"
+ VICTORY_POINTS_4357:0 "북 팔라우"
+ VICTORY_POINTS_7251:0 "라바울"
+ VICTORY_POINTS_7302:0 "수바"
+ VICTORY_POINTS_12140:0 "괌"
+ VICTORY_POINTS_12237:0 "라에"
+ VICTORY_POINTS_13021:0 "타라와"
+ VICTORY_POINTS_13025:0 "이오지마"
+ VICTORY_POINTS_13028:0 "얍"
+ VICTORY_POINTS_13038:0 "나우루"
+ VICTORY_POINTS_13041:0 "콰잘레인"
+ VICTORY_POINTS_13046:0 "에네웨타크"
+ VICTORY_POINTS_13047:0 "웨이크"
+ VICTORY_POINTS_13052:0 "미드웨이"
+ VICTORY_POINTS_4286:0 "수바"
+ VICTORY_POINTS_5010:0 "아디스아바바"
+ VICTORY_POINTS_1984:0 "곤다르"
+ VICTORY_POINTS_7980:0 "하라르"
+ VICTORY_POINTS_1319:0 "쿤밍"
+ VICTORY_POINTS_8049:0 "옌안"
+ VICTORY_POINTS_1519:0 "타이위안"
+ VICTORY_POINTS_377:0 "카디프"
+ VICTORY_POINTS_495:0 "도르트문트"
+ VICTORY_POINTS_540:0 "플리머스"
+ VICTORY_POINTS_657:0 "콘스탄차"
+ VICTORY_POINTS_778:0 "안시"
+ VICTORY_POINTS_904:0 "뒤즈제"
+ VICTORY_POINTS_911:0 "툴롱"
+ VICTORY_POINTS_925:0 "앙코나"
+ VICTORY_POINTS_1005:0 "안탈리아"
+ VICTORY_POINTS_1048:0 "카디스"
+ VICTORY_POINTS_1070:0 "하이커우"
+ VICTORY_POINTS_1273:0 "고아"
+ VICTORY_POINTS_1440:0 "산후안"
+ VICTORY_POINTS_1751:1 "폰타델가다"
+ VICTORY_POINTS_2038:0 "프리타운"
+ VICTORY_POINTS_2045:0 "톈수이"
+ VICTORY_POINTS_2189:0 "호바트"
+ VICTORY_POINTS_2196:0 "다르에스살람"
+ VICTORY_POINTS_3456:0 "카라치"
+ VICTORY_POINTS_3501:0 "도버"
+ VICTORY_POINTS_3838:0 "아작시오"
+ VICTORY_POINTS_4159:0 "메시나"
+ VICTORY_POINTS_4189:0 "마카오"
+ VICTORY_POINTS_4206:0 "텔 아비브"
+ VICTORY_POINTS_4464:0 "빌럭시"
+ VICTORY_POINTS_5074:0 "아덴"
+ VICTORY_POINTS_6300:0 "로사이스"
+ VICTORY_POINTS_3561:0 "에르푸르트"
+ VICTORY_POINTS_6882:0 "뉴어크"
+ VICTORY_POINTS_6973:0 "라스페치아"
+ VICTORY_POINTS_6984:0 "볼티모어"
+ VICTORY_POINTS_7132:0 "오랑"
+ VICTORY_POINTS_7371:1 "브루나이"
+ VICTORY_POINTS_7617:0 "콜론"
+ VICTORY_POINTS_7940:0 "거얼무"
+ VICTORY_POINTS_7960:0 "아부다비"
+ VICTORY_POINTS_7965:0 "달리"
+ VICTORY_POINTS_7982:0 "반다르아바스"
+ VICTORY_POINTS_8085:0 "쿠웨이트시"
+ VICTORY_POINTS_8252:0 "과야킬"
+ VICTORY_POINTS_9108:0 "룰레오"
+ VICTORY_POINTS_9458:0 "포츠머스"
+ VICTORY_POINTS_9832:0 "프로비던스"
+ VICTORY_POINTS_9907:0 "플로렌스"
+ VICTORY_POINTS_9945:1 "세우타"
+ VICTORY_POINTS_9974:0 "닝보"
+ VICTORY_POINTS_9975:0 "아마다바드"
+ VICTORY_POINTS_9994:0 "비제르테"
+ VICTORY_POINTS_10007:0 "로도스"
+ VICTORY_POINTS_10201:0 "트링코말리"
+ VICTORY_POINTS_10367:0 "애투섬"
+ VICTORY_POINTS_10862:0 "아크라"
+ VICTORY_POINTS_11064:0 "스캐퍼 플로"
+ VICTORY_POINTS_271:0 "노리치"
+ VICTORY_POINTS_11297:0 "헐"
+ VICTORY_POINTS_11435:0 "비트부르크"
+ VICTORY_POINTS_12674:0 "레이캬비크"
  VICTORY_POINTS_11746:0 "Adana"
  VICTORY_POINTS_11773:0 "Cagliari"
  VICTORY_POINTS_11833:0 "Livorno"
