--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -548,56 +548,56 @@
  VICTORY_POINTS_11297:0 "헐"
  VICTORY_POINTS_11435:0 "비트부르크"
  VICTORY_POINTS_12674:0 "레이캬비크"
- VICTORY_POINTS_11746:0 "Adana"
- VICTORY_POINTS_11773:0 "Cagliari"
- VICTORY_POINTS_11833:0 "Livorno"
- VICTORY_POINTS_11846:0 "Anzio"
- VICTORY_POINTS_12003:1 "Valletta"
- VICTORY_POINTS_12068:0 "Gaoxiong"
- VICTORY_POINTS_12725:0 "Port Sudan"
- VICTORY_POINTS_12732:0 "Lanzhou"
- VICTORY_POINTS_12758:0 "Medina"
- VICTORY_POINTS_12883:0 "Jeddah"
- VICTORY_POINTS_12991:0 "Mogadishu"
- VICTORY_POINTS_6318:0 "Manchester"
- VICTORY_POINTS_11405:0 "Zaporozhe"
- VICTORY_POINTS_11561:0 "Krivoi Rih"
- VICTORY_POINTS_9461:0 "Voroshilovgrad"
- VICTORY_POINTS_3734:0 "Krasnodar"
- VICTORY_POINTS_11349:0 "Rzhev"
- VICTORY_POINTS_8011:0 "Bangalore"
- VICTORY_POINTS_8087:0 "Hyderabad"
- VICTORY_POINTS_11929:0 "Dacca"
- VICTORY_POINTS_4516:0 "Patna"
- VICTORY_POINTS_12137:0 "Lucknow"
- VICTORY_POINTS_9292:0 "Chelyabinsk"
- VICTORY_POINTS_4333:0 "Akmolinsk"
- VICTORY_POINTS_11752:0 "Zhangbei"
- VICTORY_POINTS_7418:0 "Xi'an"
- VICTORY_POINTS_4879:0 "Windhoek"
- VICTORY_POINTS_10412:0 "Richmond"
- VICTORY_POINTS_12715:0 "Mérida"
- VICTORY_POINTS_4904:0 "Campeche"
- VICTORY_POINTS_1900:0 "Tuxtla Gutiérrez"
- VICTORY_POINTS_12461:0 "Tijuana"
- VICTORY_POINTS_10769:0 "Reynosa"
- VICTORY_POINTS_5015:0 "Matamoros"
- VICTORY_POINTS_10889:0 "Coatzacoalcos"
- VICTORY_POINTS_2021:0 "Villahermosa"
- VICTORY_POINTS_8089:0 "Puebla"
- VICTORY_POINTS_8097:0 "Juárez"
- VICTORY_POINTS_2008:0 "León"
- VICTORY_POINTS_7921:0 "Durango"
- VICTORY_POINTS_8057:0 "Culiacán"
- VICTORY_POINTS_10895:0 "Mazatlán"
- VICTORY_POINTS_12736:0 "La Paz"
- VICTORY_POINTS_10830:0 "Chihuahua"
- VICTORY_POINTS_1892:0 "Ensenada"
- VICTORY_POINTS_4908:0 "Guaymas"
- VICTORY_POINTS_10765:0 "Hermosillo"
- VICTORY_POINTS_4977:0 "Ciudad Obregón"
- VICTORY_POINTS_2060:0 "Nuevo Laredo"
- VICTORY_POINTS_12811:0 "Piedras Negras"
+ VICTORY_POINTS_11746:0 "아다나"
+ VICTORY_POINTS_11773:0 "칼리아리"
+ VICTORY_POINTS_11833:0 "리보르노"
+ VICTORY_POINTS_11846:0 "안치오"
+ VICTORY_POINTS_12003:1 "발레타"
+ VICTORY_POINTS_12068:0 "가오슝"
+ VICTORY_POINTS_12725:0 "포트수단"
+ VICTORY_POINTS_12732:0 "란저우"
+ VICTORY_POINTS_12758:0 "메디나"
+ VICTORY_POINTS_12883:0 "제다"
+ VICTORY_POINTS_12991:0 "모가디슈"
+ VICTORY_POINTS_6318:0 "맨체스터"
+ VICTORY_POINTS_11405:0 "자포로제"
+ VICTORY_POINTS_11561:0 "크리비리흐"
+ VICTORY_POINTS_9461:0 "보로실로브그라드"
+ VICTORY_POINTS_3734:0 "크라스노다르"
+ VICTORY_POINTS_11349:0 "르제프"
+ VICTORY_POINTS_8011:0 "방갈로르"
+ VICTORY_POINTS_8087:0 "하이데라바드"
+ VICTORY_POINTS_11929:0 "다카"
+ VICTORY_POINTS_4516:0 "파트나"
+ VICTORY_POINTS_12137:0 "러크나우"
+ VICTORY_POINTS_9292:0 "첼랴빈스크"
+ VICTORY_POINTS_4333:0 "아크몰린스크"
+ VICTORY_POINTS_11752:0 "장베이"
+ VICTORY_POINTS_7418:0 "시안"
+ VICTORY_POINTS_4879:0 "빈트후크"
+ VICTORY_POINTS_10412:0 "리치먼드"
+ VICTORY_POINTS_12715:0 "메리다"
+ VICTORY_POINTS_4904:0 "캄페체"
+ VICTORY_POINTS_1900:0 "툭스틀라구티에레스"
+ VICTORY_POINTS_12461:0 "티후아나"
+ VICTORY_POINTS_10769:0 "레이노사"
+ VICTORY_POINTS_5015:0 "마타모로스"
+ VICTORY_POINTS_10889:0 "코아트사코알코스"
+ VICTORY_POINTS_2021:0 "비야에르모사"
+ VICTORY_POINTS_8089:0 "푸에블라"
+ VICTORY_POINTS_8097:0 "후아레스"
+ VICTORY_POINTS_2008:0 "레온"
+ VICTORY_POINTS_7921:0 "듀랑고"
+ VICTORY_POINTS_8057:0 "쿨리아칸"
+ VICTORY_POINTS_10895:0 "마사틀란"
+ VICTORY_POINTS_12736:0 "라파스"
+ VICTORY_POINTS_10830:0 "치와와"
+ VICTORY_POINTS_1892:0 "엔세나다"
+ VICTORY_POINTS_4908:0 "과이마스"
+ VICTORY_POINTS_10765:0 "에르모시요"
+ VICTORY_POINTS_4977:0 "시우다드오브레곤"
+ VICTORY_POINTS_2060:0 "누에보라레도"
+ VICTORY_POINTS_12811:0 "피에드라스 네그라스"
  VICTORY_POINTS_10730:0 "Acapulco"
  VICTORY_POINTS_10172:0 "Aguascalientes"
  VICTORY_POINTS_4887:0 "Morelia"
