--- a/AST_l_english.yml
+++ b/AST_l_english.yml
@@ -3,5 +3,5 @@
  AST_de_havilland_australia:0 "드 하빌랜드 오스트레일리아"
  AST_government_aircraft_factories:0 "국영 항공기 공장"
  AST_cockatoo_island_naval_dockyard:0 "코카투 섬 조선소"
- AST_generic_artillery_manufacturer:0 "루월트 찰스 플레티"
+ AST_generic_artillery_manufacturer:0 "찰스 루월트"
  #Maribyrnong Factory if another artillery manufacturer is needed (probably for cost or unique jungle bonus due to 25 pounder short)
