--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -598,96 +598,96 @@
  VICTORY_POINTS_4977:0 "시우다드오브레곤"
  VICTORY_POINTS_2060:0 "누에보라레도"
  VICTORY_POINTS_12811:0 "피에드라스 네그라스"
- VICTORY_POINTS_10730:0 "Acapulco"
- VICTORY_POINTS_10172:0 "Aguascalientes"
- VICTORY_POINTS_4887:0 "Morelia"
- VICTORY_POINTS_8032:0 "Manzanillo"
- VICTORY_POINTS_12746:0 "Puerto Vallarta"
- VICTORY_POINTS_5071:0 "Agua Prieta"
- VICTORY_POINTS_4965:0 "Cancún"
- VICTORY_POINTS_6526:0 "Truro"
- VICTORY_POINTS_4989:0 "Banjul"
- VICTORY_POINTS_12891:0 "Bissau"
- VICTORY_POINTS_1909:0 "Conakry"
- VICTORY_POINTS_10803:1 "Abidjan"
- VICTORY_POINTS_4927:0 "Bamako"
- VICTORY_POINTS_10836:0 "Ouagadougou"
- VICTORY_POINTS_2056:0 "Niamey"
- VICTORY_POINTS_1951:0 "Lome"
- VICTORY_POINTS_10919:0 "Porto Novo"
- VICTORY_POINTS_2080:0 "Yaoundé"
- VICTORY_POINTS_1903:0 "Malabo"
+ VICTORY_POINTS_10730:0 "아카풀코"
+ VICTORY_POINTS_10172:0 "아과스칼리엔테스"
+ VICTORY_POINTS_4887:0 "모렐리아"
+ VICTORY_POINTS_8032:0 "만사니요"
+ VICTORY_POINTS_12746:0 "푸에르토바야르타"
+ VICTORY_POINTS_5071:0 "아구아 프리에타"
+ VICTORY_POINTS_4965:0 "칸쿤"
+ VICTORY_POINTS_6526:0 "트루로"
+ VICTORY_POINTS_4989:0 "반줄"
+ VICTORY_POINTS_12891:0 "비사우"
+ VICTORY_POINTS_1909:0 "코나크리"
+ VICTORY_POINTS_10803:1 "아비장"
+ VICTORY_POINTS_4927:0 "바마코"
+ VICTORY_POINTS_10836:0 "와가두구"
+ VICTORY_POINTS_2056:0 "니아메"
+ VICTORY_POINTS_1951:0 "로메"
+ VICTORY_POINTS_10919:0 "포르토노보"
+ VICTORY_POINTS_2080:0 "야운데"
+ VICTORY_POINTS_1903:0 "말라보"
  #N'Djamena
- VICTORY_POINTS_2081:0 "Fort-Lamy" 
- VICTORY_POINTS_12830:0 "Bangui"
- VICTORY_POINTS_8214:0 "Gaborone"
- VICTORY_POINTS_5199:0 "Lusaka"
- VICTORY_POINTS_12986:0 "Lilongwe"
- VICTORY_POINTS_2220:0 "Bujumbura"
- VICTORY_POINTS_9962:0 "Kigali"
- VICTORY_POINTS_12989:0 "Kampala"
- VICTORY_POINTS_1939:0 "Nairobi"
- VICTORY_POINTS_8124:0 "Djibouti"
- VICTORY_POINTS_2077:0 "Belize City"
- VICTORY_POINTS_12304:0 "Kingston"
- VICTORY_POINTS_10254:0 "Nassau"
- VICTORY_POINTS_9377:0 "Pointe-à-Pitre"
- VICTORY_POINTS_3284:0 "Port of Spain"
- VICTORY_POINTS_10906:0 "Paramaribo"
- VICTORY_POINTS_4982:0 "Georgetown"
- VICTORY_POINTS_8051:0 "Doha"
- VICTORY_POINTS_1384:0 "Dushanbe"
- VICTORY_POINTS_12333:0 "Ashgabat"
- VICTORY_POINTS_12583:0 "Bishkek"
- VICTORY_POINTS_3707:1 "Chisinău"
- VICTORY_POINTS_5128:0 "Antananarivo"
- VICTORY_POINTS_11984:0 "Nicosia"
- VICTORY_POINTS_13215:0 "Mexicali"
- VICTORY_POINTS_6241:0 "Utrecht"
- VICTORY_POINTS_9335:0 "Groningen"
- VICTORY_POINTS_6336:0 "Leeuwarden"
- VICTORY_POINTS_9363:0 "Arnhem"
- VICTORY_POINTS_3262:0 "Breda"
- VICTORY_POINTS_11562:0 "Maastricht"
- VICTORY_POINTS_13068:0 "Leuven"
- VICTORY_POINTS_3576:0 "Kortrijk"
- VICTORY_POINTS_9536:0 "Charleroi"
- VICTORY_POINTS_5034:0 "Nouakchott"
- VICTORY_POINTS_8038:0 "Laayoune"
- VICTORY_POINTS_11350:0 "Bridgetown"
- VICTORY_POINTS_4967:0 "Malé"
- VICTORY_POINTS_9315:0 "Sheffield"
- VICTORY_POINTS_153:0 "Willemstad"
- VICTORY_POINTS_7376:0 "Phnom Penh"
- VICTORY_POINTS_1464:0 "Vientiane"
- VICTORY_POINTS_6464:0 "Katowice"
- VICTORY_POINTS_11467:0 "Gleiwitz"
- VICTORY_POINTS_9511:0 "Oppeln"
- VICTORY_POINTS_552:0 "Liegnitz"
- VICTORY_POINTS_3545:0 "Waldenburg"
- VICTORY_POINTS_11430:0 "Kielce"
- VICTORY_POINTS_3458:0 "Radom"
- VICTORY_POINTS_562:0 "Ostrowiec"
- VICTORY_POINTS_3230:0 "Płock"
- VICTORY_POINTS_6375:0 "Allenstein"
- VICTORY_POINTS_11386:0 "Lyck"
- VICTORY_POINTS_3254:0 "Suwałki"
- VICTORY_POINTS_11301:0 "Białystok"
- VICTORY_POINTS_560:0 "Pińsk"
- VICTORY_POINTS_11411:0 "Stanisławów"
- VICTORY_POINTS_6483:0 "Drohobych"
- VICTORY_POINTS_3483:0 "Tarnopol"
- VICTORY_POINTS_513:0 "Kowel"
- VICTORY_POINTS_572:0 "Łuck"
- VICTORY_POINTS_6557:0 "Równe"
- VICTORY_POINTS_11399:0 "Lublin"
- VICTORY_POINTS_9544:0 "Biała Podlaska"
- VICTORY_POINTS_402:0 "Siedlce"
- VICTORY_POINTS_442:0 "Tarnów"
- VICTORY_POINTS_3295:0 "Toruń"
- VICTORY_POINTS_279:1 "Bydgoszcz"
- VICTORY_POINTS_6314:0 "Palanga"
- VICTORY_POINTS_9262:0 "Liepāja"
+ VICTORY_POINTS_2081:0 "포르라미" 
+ VICTORY_POINTS_12830:0 "방기"
+ VICTORY_POINTS_8214:0 "가보로네"
+ VICTORY_POINTS_5199:0 "루사카"
+ VICTORY_POINTS_12986:0 "릴롱궤"
+ VICTORY_POINTS_2220:0 "부줌부라"
+ VICTORY_POINTS_9962:0 "키갈리"
+ VICTORY_POINTS_12989:0 "캄팔라"
+ VICTORY_POINTS_1939:0 "나이로비"
+ VICTORY_POINTS_8124:0 "지부티"
+ VICTORY_POINTS_2077:0 "벨리즈시티"
+ VICTORY_POINTS_12304:0 "킹스톤"
+ VICTORY_POINTS_10254:0 "나사우"
+ VICTORY_POINTS_9377:0 "푸앵타피트르"
+ VICTORY_POINTS_3284:0 "포트오브스페인"
+ VICTORY_POINTS_10906:0 "파라마리보"
+ VICTORY_POINTS_4982:0 "조지타운"
+ VICTORY_POINTS_8051:0 "도하"
+ VICTORY_POINTS_1384:0 "두샨베"
+ VICTORY_POINTS_12333:0 "아슈하바트"
+ VICTORY_POINTS_12583:0 "비슈케크"
+ VICTORY_POINTS_3707:1 "키시나우"
+ VICTORY_POINTS_5128:0 "안타나나리보"
+ VICTORY_POINTS_11984:0 "니코시아"
+ VICTORY_POINTS_13215:0 "메히칼리"
+ VICTORY_POINTS_6241:0 "위트레흐트"
+ VICTORY_POINTS_9335:0 "그로닝겐"
+ VICTORY_POINTS_6336:0 "레이와르던"
+ VICTORY_POINTS_9363:0 "아른헴"
+ VICTORY_POINTS_3262:0 "브레다"
+ VICTORY_POINTS_11562:0 "마스트리히트"
+ VICTORY_POINTS_13068:0 "루벤"
+ VICTORY_POINTS_3576:0 "코르트레이크"
+ VICTORY_POINTS_9536:0 "샤를루아"
+ VICTORY_POINTS_5034:0 "누악쇼트"
+ VICTORY_POINTS_8038:0 "라윤"
+ VICTORY_POINTS_11350:0 "브리지타운"
+ VICTORY_POINTS_4967:0 "말레"
+ VICTORY_POINTS_9315:0 "셰필드"
+ VICTORY_POINTS_153:0 "빌렘스타트"
+ VICTORY_POINTS_7376:0 "프놈펜"
+ VICTORY_POINTS_1464:0 "비엔티안"
+ VICTORY_POINTS_6464:0 "카토비체"
+ VICTORY_POINTS_11467:0 "글리비체"
+ VICTORY_POINTS_9511:0 "오폴레"
+ VICTORY_POINTS_552:0 "레그니차"
+ VICTORY_POINTS_3545:0 "발덴부르크"
+ VICTORY_POINTS_11430:0 "키엘체"
+ VICTORY_POINTS_3458:0 "라돔"
+ VICTORY_POINTS_562:0 "오스트로비에츠"
+ VICTORY_POINTS_3230:0 "프워츠크"
+ VICTORY_POINTS_6375:0 "알렌슈타인"
+ VICTORY_POINTS_11386:0 "리크"
+ VICTORY_POINTS_3254:0 "수바우키"
+ VICTORY_POINTS_11301:0 "비아위스토크"
+ VICTORY_POINTS_560:0 "핀스크"
+ VICTORY_POINTS_11411:0 "스타니스와보프"
+ VICTORY_POINTS_6483:0 "드로고비치"
+ VICTORY_POINTS_3483:0 "테르노필"
+ VICTORY_POINTS_513:0 "코벨"
+ VICTORY_POINTS_572:0 "우츠크"
+ VICTORY_POINTS_6557:0 "루브네"
+ VICTORY_POINTS_11399:0 "루블린"
+ VICTORY_POINTS_9544:0 "비아와포들라스카"
+ VICTORY_POINTS_402:0 "시에들체"
+ VICTORY_POINTS_442:0 "타르누프"
+ VICTORY_POINTS_3295:0 "토룬"
+ VICTORY_POINTS_279:1 "비드고슈치"
+ VICTORY_POINTS_6314:0 "팔랑가"
+ VICTORY_POINTS_9262:0 "리예파야"
  VICTORY_POINTS_9289:0 "Mogilev"
  VICTORY_POINTS_3350:0 "Bobruysk"
  VICTORY_POINTS_11313:0 "Salihorsk"
