--- a/Rt56_SOV_l_english.yml
+++ b/Rt56_SOV_l_english.yml
@@ -266,7 +266,7 @@
  r56.soviet.26.a:0 "민주주의를 지지하는 이들은 러시아의 진정한 정신을 가지고 있다!"
  r56.soviet.26.b:0 "다른 체제는 실패했다, 군주제만이 답이다!"
  r56.soviet.26.c:0 "민족주의자들이 우리나라를 영광으로 이끌 것이다!"
- r56.soviet.27.t:0 "스탈린이 권죄에서 내려오다"
+ r56.soviet.27.t:0 "스탈린이 권좌에서 내려오다"
  r56.soviet.27.d:0 "스탈린읜 체포되어 공산당원들에 의해 즉시 처형당했습니다. [SOV.GetLeader]는 NKVD 요원들과 함께 스탈린의 사무실로 들어가 러시아 인민들에 대한 범죄를 열거하고 그를 체포했습니다. 재판이 열린 바로 다음날 사형선고를 받고 오후 늦게 교수형을 당했습니다. 또한 스탈린의 범죄에 가담한 혐의로 기소된 러시아 정부의 많은 관리들이 체포되어 수감되거나 처형되고 있습니다. [SOV.GetNameDefCap]을(를) 누가 이끌지 아무도 모릅니다. 소문에 의하면 [SOV.GetLeader]는 트로츠키가 돌아와서 이끌도록 요청받았다고 합니다."
  r56.soviet.27.a:0 "실패한 혁명이 죽었군!"
  r56.soviet.27.b:0 "스탈린의 카드로 만든 집이 마침내 무너졌군"
