--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -688,56 +688,56 @@
  VICTORY_POINTS_279:1 "비드고슈치"
  VICTORY_POINTS_6314:0 "팔랑가"
  VICTORY_POINTS_9262:0 "리예파야"
- VICTORY_POINTS_9289:0 "Mogilev"
- VICTORY_POINTS_3350:0 "Bobruysk"
- VICTORY_POINTS_11313:0 "Salihorsk"
- VICTORY_POINTS_9304:0 "Baranowicze"
- VICTORY_POINTS_6593:0 "Zhytomyr"
- VICTORY_POINTS_3457:0 "Khmelnytskyi"
- VICTORY_POINTS_476:0 "Vinnytsia"
- VICTORY_POINTS_488:0 "Cherkasy"
- VICTORY_POINTS_11683:0 "Mykolaiv"
- VICTORY_POINTS_11504:0 "Poltava"
- VICTORY_POINTS_3520:0 "Sumy"
- VICTORY_POINTS_9566:0 "Shostka"
- VICTORY_POINTS_9449:0 "Belgorod"
- VICTORY_POINTS_3568:0 "Chernigov"
- VICTORY_POINTS_11597:0 "Dobrich"
- VICTORY_POINTS_577:0 "Chernivtsi"
- VICTORY_POINTS_3548:0 "Mukačevo"
- VICTORY_POINTS_11539:0 "Žilina"
- VICTORY_POINTS_3583:0 "Ostrava"
- VICTORY_POINTS_6562:0 "Olomouc"
- VICTORY_POINTS_9569:0 "Tábor"
- VICTORY_POINTS_9541:0 "Budweis"
- VICTORY_POINTS_3585:0 "Carlsbad"
- VICTORY_POINTS_11432:0 "Aussig"
- VICTORY_POINTS_11401:0 "Liberec"
- VICTORY_POINTS_3473:0 "Küstrin"
- VICTORY_POINTS_9388:0 "Stralsund"
- VICTORY_POINTS_11305:0 "Lübeck"
- VICTORY_POINTS_11372:0 "Köslin"
- VICTORY_POINTS_9606:0 "Timisoara"
- VICTORY_POINTS_619:0 "Novi Sad"
- VICTORY_POINTS_6983:0 "Banja Luka"
- VICTORY_POINTS_564:0 "Kassel"
- VICTORY_POINTS_425:0 "Weimar"
- VICTORY_POINTS_11360:0 "Emden"
- VICTORY_POINTS_11388:0 "Münster"
- VICTORY_POINTS_9509:0 "Hamm"
- VICTORY_POINTS_3423:0 "Koblenz"
- VICTORY_POINTS_9575:0 "Trier"
- VICTORY_POINTS_11531:0 "Saarbrücken"
- VICTORY_POINTS_549:0 "Haguenau"
- VICTORY_POINTS_6529:0 "Colmar"
- VICTORY_POINTS_3530:0 "Karlsruhe"
- VICTORY_POINTS_11499:0 "Ulm"
- VICTORY_POINTS_6712:0 "Freiburg"
- VICTORY_POINTS_11640:0 "Müllheim"
- VICTORY_POINTS_708:0 "Augsburg"
- VICTORY_POINTS_3673:0 "Klagenfurt"
- VICTORY_POINTS_9665:0 "Wels"
- VICTORY_POINTS_732:0 "Linz"
+ VICTORY_POINTS_9289:0 "모힐레프"
+ VICTORY_POINTS_3350:0 "바브뤼스크"
+ VICTORY_POINTS_11313:0 "살리호르스크"
+ VICTORY_POINTS_9304:0 "바라노비치"
+ VICTORY_POINTS_6593:0 "지토미르"
+ VICTORY_POINTS_3457:0 "흐멜니츠키"
+ VICTORY_POINTS_476:0 "빈니차"
+ VICTORY_POINTS_488:0 "체르카시"
+ VICTORY_POINTS_11683:0 "미콜라이프"
+ VICTORY_POINTS_11504:0 "폴타바"
+ VICTORY_POINTS_3520:0 "수미"
+ VICTORY_POINTS_9566:0 "쇼스트카"
+ VICTORY_POINTS_9449:0 "벨고로드"
+ VICTORY_POINTS_3568:0 "체르니고프"
+ VICTORY_POINTS_11597:0 "도브리치"
+ VICTORY_POINTS_577:0 "체르니우치"
+ VICTORY_POINTS_3548:0 "무카체보"
+ VICTORY_POINTS_11539:0 "질리나"
+ VICTORY_POINTS_3583:0 "오스트라바"
+ VICTORY_POINTS_6562:0 "올로모우츠"
+ VICTORY_POINTS_9569:0 "타보르"
+ VICTORY_POINTS_9541:0 "부트바이스"
+ VICTORY_POINTS_3585:0 "칼즈배드"
+ VICTORY_POINTS_11432:0 "아우시히"
+ VICTORY_POINTS_11401:0 "리베레츠"
+ VICTORY_POINTS_3473:0 "퀴스트린"
+ VICTORY_POINTS_9388:0 "슈트랄준트"
+ VICTORY_POINTS_11305:0 "뤼벡"
+ VICTORY_POINTS_11372:0 "코샬린"
+ VICTORY_POINTS_9606:0 "티미쇼아라"
+ VICTORY_POINTS_619:0 "노비사드"
+ VICTORY_POINTS_6983:0 "바냐루카"
+ VICTORY_POINTS_564:0 "카셀"
+ VICTORY_POINTS_425:0 "바이마르"
+ VICTORY_POINTS_11360:0 "엠덴"
+ VICTORY_POINTS_11388:0 "뮌스터"
+ VICTORY_POINTS_9509:0 "함"
+ VICTORY_POINTS_3423:0 "코블렌츠"
+ VICTORY_POINTS_9575:0 "트리어"
+ VICTORY_POINTS_11531:0 "자르브뤼켄"
+ VICTORY_POINTS_549:0 "아그노"
+ VICTORY_POINTS_6529:0 "콜마르"
+ VICTORY_POINTS_3530:0 "카를스루에"
+ VICTORY_POINTS_11499:0 "울름"
+ VICTORY_POINTS_6712:0 "프라이부르크"
+ VICTORY_POINTS_11640:0 "뮐헤임"
+ VICTORY_POINTS_708:0 "아우크스부르크"
+ VICTORY_POINTS_3673:0 "클라겐푸르트"
+ VICTORY_POINTS_9665:0 "벨스"
+ VICTORY_POINTS_732:0 "린츠"
  VICTORY_POINTS_11612:0 "Villach"
  VICTORY_POINTS_11564:0 "Rijeka"
  VICTORY_POINTS_9809:0 "Podgorica"
